# Examen-Parcial-3Vinculante

./: CMakeLists.txt  README.md  main.cpp
Actor/: Actor.cpp  Actor.h
Crud/: Crud.cpp  Crud.h
Launcher/: Launcher.cpp  Launcher.h
Tarea/: Tarea.cpp  Tarea.h
